test/data/semantic/bad/reserved_name_var_pattern.coy
fn main() -> () {
    let false = 0;

    ()
}
